force-app/main/default/objects/FAQ__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>