force-app/main/default/objects/FAQ__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entretien &amp; réparation</fullName>
            </value>
            <value>
                <fullName>Livraison &amp; retours</fullName>
            </value>
            <value>
                <fullName>Authentification</fullName>
            </value>
            <value>
                <fullName>Paiement</fullName>
            </value>
            <value>
                <fullName>Général</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>